@@ -1,3 +1,8 @@
+2009-09-23  Alan Modra  <amodra@bigpond.net.au>
+
+	* symbols.c (define_sym_at_dot): New function, extracted from..
+	(colon): ..here.  Define error case cloned symbol.
+
 2009-09-21  Richard Sandiford  <rdsandiford@googlemail.com>
 
 	* config/tc-mips.c (MIPS_JALR_HINT_P): Take an expr argument.
